--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+absl-py==2.2.0
 accelerate==1.5.2
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.14
@@ -24,6 +25,7 @@ filelock==3.17.0
 findpython==0.6.3
 frozenlist==1.5.0
 fsspec==2024.12.0
+grpcio==1.71.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
@@ -37,6 +39,7 @@ jaraco.functools==4.1.0
 jeepney==0.9.0
 Jinja2==3.1.6
 keyring==25.6.0
+Markdown==3.7
 MarkupSafe==3.0.2
 more-itertools==10.6.0
 mpmath==1.3.0
@@ -44,6 +47,7 @@ msgpack==1.1.0
 multidict==6.2.0
 multiprocess==0.70.16
 networkx==3.4.2
+numexpr==2.10.2
 numpy==2.2.3
 nvidia-cublas-cu12==12.4.5.8
 nvidia-cuda-cupti-cu12==12.4.127
@@ -65,6 +69,7 @@ pkginfo==1.12.1.2
 platformdirs==4.3.7
 poetry-core==2.1.1
 propcache==0.3.0
+protobuf==6.30.1
 psutil==7.0.0
 pyarrow==19.0.1
 pycparser==2.22
@@ -82,6 +87,8 @@ shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 sympy==1.13.1
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
 tokenizers==0.21.0
 tomli==2.2.1
 tomlkit==0.13.2
@@ -94,6 +101,7 @@ typing_extensions==4.12.2
 tzdata==2025.2
 urllib3==2.3.0
 virtualenv==20.29.3
+Werkzeug==3.1.3
 xxhash==3.5.0
 yarl==1.18.3
 zipp==3.21.0
